<resources>
    <string name="app_name">Planarr</string>
    <string name="motto">Welcome to Planarr.\nPlan every step of your journey.</string>
    <string name="login_register">Register</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_email">Email</string>
    <string name="task_suggestion">I want to…</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="pick_date">Pick Date</string>
    <string name="priority">Priority:</string>
    <string name="less_important">Less important</string>
    <string name="more_important">More important</string>
    <string name="loading">Loading</string>
    <string name="add_new">Add new</string>
    <string name="add_new_task">Add new task</string>
    <string name="done">Done</string>
    <string name="task_no_name">Please name the task.</string>
    <string name="check_internet">Please check network connection.</string>
    <string name="sign_in_failed">Sign in failed, please try again.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="account_create_fail">Account creation failed.</string>
    <string name="please_enter_valid">Please enter a valid email and password.</string>
    <string name="sign_out">Sign out</string>
</resources>
