<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/task_margin_hor"
    android:layout_marginRight="@dimen/task_margin_hor"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/task_ed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/task_suggestion"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/task_margin_ver"
        />

    <Button
        android:id="@+id/task_bt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/task_margin_ver"
        android:onClick="datePickClicked"
        android:text="@string/pick_date"
        android:textSize="@dimen/text_size" />


    <TextView
        android:text="@string/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/task_margin_ver"/>

    <SeekBar
        android:id="@+id/task_sb_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="4"
        />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/less_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_alignParentStart="true"/>

        <TextView
            android:text="@string/more_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

</LinearLayout></ScrollView>